- Fix netlify form not working   - Changed method for extracting form state to be delivered to API   - Added field name to email field - Fix Ticker Defects   - Ticker spacing is even   - Ticker can now display 3xl text without overflow, but not 4xl   - Ticker now displays larger message - Layout Changes   - Fix layout and formatting issues on LP page

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,9 +13,14 @@
   position: relative;
   right: 50%;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
   cursor: url("/PointerFinger.svg") 24 24, auto;
   image-rendering: -webkit-optimize-contrast;
+}
+
+.ticker {
+  overflow: visible !important;
 }
